--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "crypto-js": "^4.1.1",
     "howler": "^2.2.3",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.33",
+    "pinia": "^2.0.13",
     "qs": "^6.11.1",
     "sass": "^1.59.3",
     "vue": "^3.2.45",
