--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "crypto-js": "^4.1.1",
     "howler": "^2.2.3",
     "mitt": "^3.0.0",
+    "node-forge": "^1.3.1",
     "pinia": "^2.0.13",
     "qs": "^6.11.1",
     "sass": "^1.59.3",
-    "vue": "^3.2.45",
+    "vue": "^3.2.25",
     "vue-router": "^4.1.6",
     "vue3-lazyload": "^0.2.5-beta",
     "yarn": "^1.22.19"
